# ood

./: Makefile  README.md  config.yml  dune-project  ood-gen.opam  ood-preview.opam  problems.html
.github/workflows/: ci.yml
admin/: config.yml
data/: news-sources.yml  releases.yml  watch.yml
data/academic_institution/: Birmingham.md  Boston.md  Cambridge.md  aix.md  brown.md  cornell.md  curie.md  harvard.md  iitd.md  illinois.md  innsbruck.md  los.md  maryland.md  massachusetts_arh.md  massachussetts.md  mcgill.md  paris.md  pennsylvania.md  princeton.md  rennes.md  rice.md  san.md  twin.md  virginia.md
data/industrial_users/fr/: aesthetic-integration.md  ahrefs.md  anssi.md  arena.md  be-sport.md  bloomberg.md  cacaoweb.md  cea.md  cryptosense.md  dassault.md  docker.md  esterel-technologies.md  facebook.md  fasoo.md  forallsecure.md  galois.md  incubaid.md  issuu.md  kernelize.md  matrix-lead.md  medit.md  microsoft.md  mount-sinai.md  r2c.md  simcorp.md  studio-associato-4sigma.md  tarides.md
data/news/ahrefs/: building-ahrefs-codebase-with-melange.md  skylake-bug-a-detective-story.md  (+3 more)
lib/: README.md  releases.ml
preview/asset/: dune
preview/lib/ood_preview/: book.ml  dune  import.ml  ocamlorg.ml  ood_preview.ml  paper.ml  success_story.ml  tutorial.ml  utils.ml  video.ml
preview/script/: watch.sh
src/lib/: data.ml  data.mli  lint.ml
src/ood/: academic_institution.ml  dune  news.ml  ood.ml  ood.mli  problem.ml  tutorial.ml  watch.ml  workflow.ml  workshop.ml
src/ood-cli/: data.ml  data.mli  lint.ml
src/ood-preview/: .ocamlformat-ignore
(+241 files in other folders)
